Scroll overflow storyboard layers to prevent width blowout

--- a/styles/Storyboard3DRenderer.module.css
+++ b/styles/Storyboard3DRenderer.module.css
@@ -39,6 +39,7 @@
 
 .storyboard3DRenderer .layers {
   display: flex;
+  overflow-x: auto;
 }
 .storyboard3DRenderer .layers .layer {
   width: 150px;
